--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "description": "",
   "devDependencies": {
     "@types/aws-lambda": "^8.10.145",
-    "@typescript-eslint/eslint-plugin": "8.8.0",
     "@typescript-eslint/parser": "8.8.0",
     "aws-lambda": "^1.0.7",
     "eslint": "9.11.1",
@@ -26,6 +25,7 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.8.1",
     "dotenv": "^16.4.5"
   }
 }
